<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="app">App</string>
    <string name="capstone">capstone</string>
    <string name="project1_title">Spotify Streamer</string>
    <string name="project2_title">Scores App</string>
    <string name="project3_title">Library App</string>
    <string name="project4_title">Build it bigger</string>
    <string name="project5_title">Xyz Reader</string>
    <string name="my_project_title">Capstone: My Own App</string>
    <string name="project_button_toast_text">This button will launch my %@!</string>
</resources>
